--- a/source/catalog.html
+++ b/source/catalog.html
@@ -74,46 +74,68 @@
     <section class="content__products products">
       <ul class="products__list">
         <li class="products__item product">
-          <picture>
-            <source srcset="img/catalog/photo-1-desktop.jpg, img/catalog/photo-1-desktop@2x.jpg 2x" media="(min-width: 1150px)">
-            <source srcset="img/catalog/photo-1-tablet.jpg, img/catalog/photo-1-tablet@2x.jpg 2x" media="(min-width: 768px)">
-            <img class="product__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография вязанного зайчика в синей одежде">
-          </picture>
+          <a class="product__link" href="#">
+            <picture>
+              <source srcset="img/catalog/photo-1-desktop.jpg, img/catalog/photo-1-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+              <source srcset="img/catalog/photo-1-tablet.jpg, img/catalog/photo-1-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <img class="product__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография вязанного зайчика в синей одежде">
+            </picture>
+          </a>
           <div class="product__desc">
             <div class="product__info-wrapper">
-              <p class="product__name product__name--toy">Зайчик-попрыгайчик</p>
+              <a class="product__name product__name--toy" href="#">Зайчик-попрыгайчик</a>
               <p class="product__info">Рост 30 см, вес 200 г</p>
             </div>
-            <p class="product__price">1 200 руб.</p>
+            <div class="product__price-wrapper">
+              <p class="product__price">1 200 руб.</p>
+              <svg class="product__cart-icon" width="21" height="18">
+                <use xlink:href="sprite.svg#cart"></use>
+              </svg>
+            </div>
           </div>
         </li>
-        <li class="products__item product">
-          <picture>
-            <source srcset="img/catalog/photo-2-desktop.jpg, img/catalog/photo-2-desktop@2x.jpg 2x" media="(min-width: 1150px)">
-            <source srcset="img/catalog/photo-2-tablet.jpg, img/catalog/photo-2-tablet@2x.jpg 2x" media="(min-width: 768px)">
-            <img class="product__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография красно-белой вязанной корзинки с бельём">
-          </picture>
 
+        <li class="products__item product">
+          <a class="product__link" href="#">
+            <picture>
+              <source srcset="img/catalog/photo-2-desktop.jpg, img/catalog/photo-2-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+              <source srcset="img/catalog/photo-2-tablet.jpg, img/catalog/photo-2-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <img class="product__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография красно-белой вязанной корзинки с бельём">
+            </picture>
+          </a>
           <div class="product__desc">
             <div class="product__info-wrapper">
-              <p class="product__name product__name--basket">Корзинка для белья</p>
+              <a class="product__name product__name--basket" href="#">Корзинка для белья</a>
               <p class="product__info">Диаметр 15 см, высота 10 см</p>
             </div>
-            <p class="product__price">690 руб.</p>
+            <div class="product__price-wrapper">
+              <p class="product__price">690 руб.</p>
+              <svg class="product__cart-icon" width="21" height="18">
+                <use xlink:href="sprite.svg#cart"></use>
+              </svg>
+            </div>
           </div>
         </li>
+
         <li class="products__item product">
-          <picture>
-            <source srcset="img/catalog/photo-3-desktop.jpg, img/catalog/photo-3-desktop@2x.jpg 2x" media="(min-width: 1150px)">
-            <source srcset="img/catalog/photo-3-tablet.jpg, img/catalog/photo-3-tablet@2x.jpg 2x" media="(min-width: 768px)">
-            <img class="product__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография большой бело-зелёной корзинки с плюшевыми игрушками">
-          </picture>
+          <a class="product__link" href="#">
+            <picture>
+              <source srcset="img/catalog/photo-3-desktop.jpg, img/catalog/photo-3-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+              <source srcset="img/catalog/photo-3-tablet.jpg, img/catalog/photo-3-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <img class="product__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография большой бело-зелёной корзинки с плюшевыми игрушками">
+            </picture>
+          </a>
           <div class="product__desc">
             <div class="product__info-wrapper">
-              <p class="product__name product__name--big-basket">Большая корзинка<br> для игрушек</p>
+              <a class="product__name" href="#">Большая корзинка<br> для игрушек</a>
               <p class="product__info">Диаметр 30 см, высота 30 см</p>
             </div>
-            <p class="product__price">1 500 руб.</p>
+            <div class="product__price-wrapper">
+              <p class="product__price">1 500 руб.</p>
+              <svg class="product__cart-icon"width="21" height="18">
+                <use xlink:href="sprite.svg#cart"></use>
+              </svg>
+            </div>
           </div>
         </li>
       </ul>
@@ -124,7 +146,9 @@
         <h2 class="creation__title">Процесс производства</h2>
       </div>
       <div class="creation__video">
-        <button class="creation__video-button"></button>
+        <button class="creation__video-button">
+          <img class="creation__video-icon" src="img/catalog/play.svg" width="101" height="77">
+        </button>
       </div>
       <div class="creation__desc-wrapper">
         <p class="creation__desc">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как
