--- a/source/form.html
+++ b/source/form.html
@@ -142,35 +142,49 @@
 
           <div class="form__input-wrapper">
             <label class="form__label form__label--input" for="input-1">Имя:</label>
-            <input class="form__input input" id="input-1" type="text" name="name" placeholder="Введите ваше имя*">
+            <div class="form__input input">
+              <input class="input__body" id="input-1" type="text" name="name" placeholder="Введите ваше имя*">
+            </div>
           </div>
 
           <div class="form__input-wrapper">
             <label class="form__label form__label--input" for="input-2">Фамилия:</label>
-            <input class="form__input input" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*">
+            <div class="form__input input">
+              <input class="input__body" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*">
+            </div>
           </div>
 
           <div class="form__input-wrapper">
             <label class="form__label form__label--input" for="input-3">Отчество:</label>
-            <input class="form__input input " id="input-3" type="text" name="patronymic"
-              placeholder="Отчество, если желаете">
+            <div class="form__input input">
+              <input class="input__body" id="input-3" type="text" name="patronymic" placeholder="Отчество, если желаете">
+            </div>
           </div>
         </fieldset>
 
         <fieldset class="form__item form__item--gray form__item--tel">
           <legend class="form__name form__name--tel">ТЕЛ</legend>
-          <input class="form__input-phone input input--tel" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+          <div class="form__input input input--tel">
+            <input class="input__body" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+            <svg class="input__icon" width="25" height="24">
+              <use xlink:href="sprite.svg#phone"></use>
+            </svg>
+          </div>
         </fieldset>
 
         <fieldset class="form__item form__item--gray form__item--email">
           <legend class="form__name form__name--mail">E-mail</legend>
-          <input class="form__input-mail input input--mail" type="mail" name="mail" placeholder="Ваш Email*">
+          <div class="form__input input input--mail">
+            <input class="input__body " type="mail" name="mail" placeholder="Ваш Email*">
+            <svg class="input__icon" width="32" height="21">
+              <use xlink:href="sprite.svg#mail"></use>
+            </svg>
+          </div>
         </fieldset>
 
         <fieldset class="form__item form__item--comment">
           <legend class="form__name form__name--comment">ДОП</legend>
-          <textarea class="form__textarea input input--textarea" name="comment"
-            placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <textarea class="form__textarea textarea" name="comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </fieldset>
 
         <div class="form__button-container">
