--- a/source/index.html
+++ b/source/index.html
@@ -228,17 +228,17 @@
     <form class="modal__form">
       <div class="modal__form-item">
         <input class="modal__input visually-hidden" id="modal-input-1" type="radio" name="size" value="S" checked>
-        <label class="modal__label" for="modal-input-1">S</label>
+        <label class="modal__label" for="modal-input-1" tabindex="0">S</label>
       </div>
 
       <div class="modal__form-item">
         <input class="modal__input visually-hidden"  id="modal-input-2" type="radio" name="size" value="M">
-        <label class="modal__label" for="modal-input-2">M</label>
+        <label class="modal__label" for="modal-input-2" tabindex="0">M</label>
       </div>
 
       <div class="modal__form-item">
         <input class="modal__input visually-hidden"  id="modal-input-3" type="radio" name="size" value="L">
-        <label class="modal__label" for="modal-input-3">L</label>
+        <label class="modal__label" for="modal-input-3" tabindex="0">L</label>
       </div>
 
       <button class="modal__button" type="submit">Добавить</button>
@@ -260,5 +260,4 @@
     </div>
   </footer>
 </body>
-
 </html>
