--- a/source/form.html
+++ b/source/form.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Мишка</title>
@@ -10,7 +10,7 @@
 
 <body class="page">
   <header class="page__heder header">
-    <nav class="header__menu menu">
+    <nav class="header__menu menu menu--closed">
       <ul class="menu__list">
         <li class="menu__item menu__item--logo menu__item--active">
           <a class="menu__link menu__link--logo" href="index.html">
@@ -34,7 +34,7 @@
         <li class="menu__item menu__item--search">
           <a class="menu__link" href="">
             <svg class="menu__icon" width="18" height="18">
-              <use xlink:href="sprite.svg#search"></use>
+              <use xlink:href="img/sprite.svg#search"></use>
             </svg>
             <span class="menu__text">Поиск по сайту</span>
           </a>
@@ -42,7 +42,7 @@
         <li class="menu__item menu__item--cart">
           <a class="menu__link" href="">
             <svg class="menu__icon" width="21" height="18">
-              <use xlink:href="sprite.svg#cart"></use>
+              <use xlink:href="img/sprite.svg#cart"></use>
             </svg>
             <span class="menu__text">Корзина: пока пуста</span>
           </a>
@@ -167,7 +167,7 @@
           <div class="form__input input input--tel">
             <input class="input__body" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
             <svg class="input__icon" width="25" height="24">
-              <use xlink:href="sprite.svg#phone"></use>
+              <use xlink:href="img/sprite.svg#phone"></use>
             </svg>
           </div>
         </fieldset>
@@ -177,7 +177,7 @@
           <div class="form__input input input--mail">
             <input class="input__body " type="mail" name="mail" placeholder="Ваш Email*">
             <svg class="input__icon" width="32" height="21">
-              <use xlink:href="sprite.svg#mail"></use>
+              <use xlink:href="img/sprite.svg#mail"></use>
             </svg>
           </div>
         </fieldset>
@@ -198,7 +198,7 @@
     <div class="footer__logo">
       <a class="footer__logo-link" href="index.html">
         <svg class="footer__logo-image" width="102" height="34" alt="Логотип 'Мишка'">
-          <use xlink:href="sprite.svg#logo-footer"></use>
+          <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
     </div>
@@ -206,21 +206,21 @@
       <li class="socials__item socials__item--instagram">
         <a class="socials__link" href="#">
           <svg class="socials__icon" width="22" height="22" alt="Instagram">
-            <use xlink:href="sprite.svg#instagram"></use>
+            <use xlink:href="img/sprite.svg#instagram"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--facebook">
         <a class="socials__link" href="#">
           <svg class="socials__icon" width="15" height="28" alt="Facebook">
-            <use xlink:href="sprite.svg#facebook"></use>
+            <use xlink:href="img/sprite.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--twitter">
         <a class="socials__link" href="#">
           <svg class="socials__icon" width="23" height="20" alt="Twitter">
-            <use xlink:href="sprite.svg#twitter"></use>
+            <use xlink:href="img/sprite.svg#twitter"></use>
           </svg>
         </a>
       </li>
@@ -229,11 +229,10 @@
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="copyright__desc">Разработано</p>
         <svg class="copyright__logo" width="27" height="35" alt="Логотип HTML Академии">
-          <use xlink:href="sprite.svg#academy"></use>
+          <use xlink:href="img/sprite.svg#academy"></use>
         </svg>
       </a>
     </div>
   </footer>
 </body>
-
 </html>
