--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Мишка</title>
@@ -34,7 +34,7 @@
         <li class="menu__item menu__item--search">
           <a class="menu__link" href="">
             <svg class="menu__icon" width="18" height="18">
-              <use xlink:href="sprite.svg#search"></use>
+              <use xlink:href="img/sprite.svg#search"></use>
             </svg>
             <span class="menu__text">Поиск по сайту</span>
           </a>
@@ -42,7 +42,7 @@
         <li class="menu__item menu__item--cart">
           <a class="menu__link" href="">
             <svg class="menu__icon" width="21" height="18">
-              <use xlink:href="sprite.svg#cart"></use>
+              <use xlink:href="img/sprite.svg#cart"></use>
             </svg>
             <span class="menu__text">Корзина: пока пуста</span>
           </a>
@@ -66,23 +66,24 @@
     </nav>
     <button class="header__button header__button--menu-closed"></button>
   </header>
+
   <main class="page__content content">
     <h1 class="visually-hidden">Мишка</h1>
 
     <section class="promo">
       <div class="promo__title-wrapper">
-        <h2 class="promo__title">Милые штуки<br> ручной <br> работы для дома</h2>
+        <h2 class="promo__title">Милые штуки <br> ручной<br> работы для дома</h2>
       </div>
       <a class="promo__block promo-block promo-block--light" href="catalog.html">
         <p class="promo-block__name">Предметы интерьера</p>
         <svg class="promo-block__icon promo-block__icon--interior" width="40" height="62">
-          <use xlink:href="sprite.svg#interior"></use>
+          <use xlink:href="img/sprite.svg#interior"></use>
         </svg>
       </a>
       <a class="promo__block promo-block promo-block--dark" href="catalog.html">
         <p class="promo-block__name">Детские игрушки</p>
         <svg class="promo-block__icon promo-block__icon--toy" width="60" height="60">
-          <use xlink:href="sprite.svg#toy"></use>
+          <use xlink:href="img/sprite.svg#toy"></use>
         </svg>
       </a>
     </section>
@@ -112,9 +113,9 @@
           </tr>
         </table>
         <picture class="main-product__picture">
-          <source type="image/webp" srcset="img/index/webp/triple-set-desktop.webp, img/index/webp/triple-set-desktop@2x.webp 2x" media="(min-width: 1150px)">
-          <source type="image/webp" srcset="img/index/webp/triple-set-tablet.webp, img/index/webp/triple-set-tablet@2x.webp 2x" media="(min-width: 768px)">
-          <source type="image/webp" srcset="img/index/webp/triple-set-mobile@2x.webp 2x">
+          <source type="image/webp" srcset="img/webp/index/triple-set-desktop.webp, img/webp/index/triple-set-desktop@2x.webp 2x" media="(min-width: 1150px)">
+          <source type="image/webp" srcset="img/webp/index/triple-set-tablet.webp, img/webp/index/triple-set-tablet@2x.webp 2x" media="(min-width: 768px)">
+          <source type="image/webp" srcset="img/webp/index/triple-set-mobile@2x.webp 2x">
 
           <source srcset="img/index/triple-set-desktop.jpg, img/index/triple-set-desktop@2x.jpg 2x" media="(min-width: 1150px)">
           <source srcset="img/index/triple-set-tablet.jpg, img/index/triple-set-tablet@2x.jpg 2x" media="(min-width: 768px)">
@@ -131,37 +132,37 @@
       <ul class="features__list">
         <li class="features__item feature features__item--one">
           <div class="feature__icon-wrapper">
-            <img class="feature__icon" src="img/icon-1.svg" width="33" height="38" alt="">
+            <img class="feature__icon" src="img/index/icons/icon-1.svg" width="33" height="38" alt="">
           </div>
           <p class="feature__desc">Экологически <br> чистые материалы</p>
         </li>
         <li class="features__item feature features__item--two">
           <div class="feature__icon-wrapper">
-            <img class="feature__icon" src="img/icon-3.svg" width="47" height="27" alt="">
+            <img class="feature__icon" src="img/index/icons/icon-3.svg" width="47" height="27" alt="">
           </div>
           <p class="feature__desc">Скандинавский стиль<br> по российской цене</p>
         </li>
         <li class="features__item feature features__item--three">
           <div class="feature__icon-wrapper">
-            <img class="feature__icon" src="img/icon-5.svg" width="34" height="27" alt="">
+            <img class="feature__icon" src="img/index/icons/icon-5.svg" width="34" height="27" alt="">
           </div>
           <p class="feature__desc">Увеличивает лайки<br> на фотографиях</p>
         </li>
         <li class="features__item feature features__item--four">
           <div class="feature__icon-wrapper">
-            <img class="feature__icon" src="img/icon-2.svg" width="35" height="34" alt="">
+            <img class="feature__icon" src="img/index/icons/icon-2.svg" width="35" height="34" alt="">
           </div>
           <p class="feature__desc">Связано вручную<br> с любовью и умилением</p>
         </li>
         <li class="features__item feature features__item--five">
           <div class="feature__icon-wrapper">
-            <img class="feature__icon" src="img/icon-4.svg" width="55" height="23" alt="">
+            <img class="feature__icon" src="img/index/icons/icon-4.svg" width="55" height="23" alt="">
           </div>
           <p class="feature__desc">Поддержка отечественного<br> производителя</p>
         </li>
         <li class="features__item feature features__item--six">
           <div class="feature__icon-wrapper">
-            <img class="feature__icon" src="img/icon-6.svg" width="33" height="32" alt="">
+            <img class="feature__icon" src="img/index/icons/icon-6.svg" width="33" height="32" alt="">
           </div>
           <p class="feature__desc">Поставляется<br> в подарочной упаковке</p>
         </li>
@@ -177,10 +178,10 @@
             фотографии не набирали и близко <br>
             такого количества лайков, как <br>
             у популярных инстамамочек.<br>
-            В отчаянии, я накупила<br>
-            аксессуаров и игрушек в Мишке,<br>
-            и мои фотографии сразу стали<br>
-            более стильными, а также<br>
+            В отчаянии, я накупила <br>
+            аксессуаров и игрушек в Мишке, <br>
+            и мои фотографии сразу стали <br>
+            более стильными, а также <br>
             набирают больше лайков!
           </p>
           <p class="review__author">Анастасия Красильникова</p>
@@ -253,7 +254,7 @@
     <div class="footer__logo">
       <a class="footer__logo-link" href="index.html">
         <svg class="footer__logo-image" width="102" height="34" alt="Логотип 'Мишка'">
-          <use xlink:href="sprite.svg#logo-footer"></use>
+          <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
     </div>
@@ -261,21 +262,21 @@
       <li class="socials__item socials__item--instagram">
         <a class="socials__link" href="#">
           <svg class="socials__icon" width="22" height="22" alt="Instagram">
-            <use xlink:href="sprite.svg#instagram"></use>
+            <use xlink:href="img/sprite.svg#instagram"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--facebook">
         <a class="socials__link" href="#">
           <svg class="socials__icon" width="15" height="28" alt="Facebook">
-            <use xlink:href="sprite.svg#facebook"></use>
+            <use xlink:href="img/sprite.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--twitter">
         <a class="socials__link" href="#">
           <svg class="socials__icon" width="23" height="20" alt="Twitter">
-            <use xlink:href="sprite.svg#twitter"></use>
+            <use xlink:href="img/sprite.svg#twitter"></use>
           </svg>
         </a>
       </li>
@@ -284,7 +285,7 @@
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="copyright__desc">Разработано</p>
         <svg class="copyright__logo" width="27" height="35" alt="Логотип HTML Академии">
-          <use xlink:href="sprite.svg#academy"></use>
+          <use xlink:href="img/sprite.svg#academy"></use>
         </svg>
       </a>
     </div>
