--- a/source/index.html
+++ b/source/index.html
@@ -72,20 +72,26 @@
 
     <section class="promo">
       <div class="promo__title-wrapper">
-        <h2 class="promo__title">Милые штуки <br> ручной<br> работы для дома</h2>
+        <h2 class="promo__title">
+          Милые штуки<br class="promo__break"><pre> </pre>
+          ручной<br><pre> </pre>
+          работы для дома
+        </h2>
       </div>
-      <a class="promo__block promo-block promo-block--light" href="catalog.html">
-        <p class="promo-block__name">Предметы интерьера</p>
-        <svg class="promo-block__icon promo-block__icon--interior" width="40" height="62">
-          <use xlink:href="img/sprite.svg#interior"></use>
-        </svg>
-      </a>
-      <a class="promo__block promo-block promo-block--dark" href="catalog.html">
-        <p class="promo-block__name">Детские игрушки</p>
-        <svg class="promo-block__icon promo-block__icon--toy" width="60" height="60">
-          <use xlink:href="img/sprite.svg#toy"></use>
-        </svg>
-      </a>
+      <div class="promo__blocks-container">
+        <a class="promo__block promo-block promo-block--light" href="catalog.html">
+          <p class="promo-block__name">Предметы интерьера</p>
+          <svg class="promo-block__icon promo-block__icon--interior" width="40" height="62">
+            <use xlink:href="img/sprite.svg#interior"></use>
+          </svg>
+        </a>
+        <a class="promo__block promo-block promo-block--dark" href="catalog.html">
+          <p class="promo-block__name">Детские игрушки</p>
+          <svg class="promo-block__icon promo-block__icon--toy" width="60" height="60">
+            <use xlink:href="img/sprite.svg#toy"></use>
+          </svg>
+        </a>
+      </div>
     </section>
 
     <section class="main-product">
