--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <link rel="preload" href="fonts/opensans.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
